--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,15 @@
       box-sizing: border-box;
 }
 
+/* -------------------------------------------- */
+
+#app {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+      font-family: Arial, Helvetica, sans-serif;      
+}
+
+ul li {
+      padding-bottom: 10px;
+}
